...
    "channel_hide": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Hide channel"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Kanalı gizle"
...
    "live_open_guide": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Show in TV guide"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Rehberde göster"
...
